# everscale-client-php-ext

./: .gitignore  CMakeLists.txt  DEVELOPMENT.MD  INSTALL.MD  INSTALL.md  README.MD  README.md  build.bat  build.sh  config.m4  config.w32  development.md  install-sdk.sh  install.md  installer.php  os.h  php_ton_client.h  platform.bat  readme.md  test-extension.php  ton_client.c  vs2017.bat  vs2019.bat  windows-installer.php
.github/workflows/: release.yml
src/: CMakeLists.txt  config.m4  config.w32  debug.h  php_ton_client.h  rpa_queue.c  ton_client.c
tests/: 001.phpt  002.phpt  003.phpt
